<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.bytebuilding.affairmanager.fragments.drawer.AboutProgramFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_about_program_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_sign_buttons"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_sign_buttons"
                android:text="@string/about_application"
                android:textSize="@dimen/material_text_headline"/>

            <TextView
                android:id="@+id/fragment_about_program_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_sign_buttons"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_sign_buttons"
                android:text="@string/about_application_description"
                android:textSize="@dimen/material_text_body1"/>

            <TextView
                android:id="@+id/fragment_about_program_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/padding_sign_buttons"
                android:autoLink="email"
                android:padding="@dimen/padding_sign_buttons"
                android:text="@string/admin_email"/>

            <TextView
                android:id="@+id/fragment_about_program_vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/padding_sign_buttons"
                android:autoLink="web"
                android:padding="@dimen/padding_sign_buttons"
                android:text="@string/admin_vk"/>

            <TextView
                android:id="@+id/fragment_about_program_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/padding_sign_buttons"
                android:autoLink="web"
                android:padding="@dimen/padding_sign_buttons"
                android:text="@string/admin_github"/>

        </LinearLayout>

    </ScrollView>
</FrameLayout>