<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_primary_light"
                android:orientation="vertical"
                tools:context="com.bytebuilding.affairmanager.activities.LoginActivity">

        <RelativeLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/padding_sign_buttons"
                android:text="@string/sign_up"
                android:textStyle="normal|bold|italic"
                android:theme="@style/SignButtons"/>

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_sign_up"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/padding_sign_buttons"
                android:text="@string/sign_in"
                android:textStyle="normal|bold|italic"
                android:theme="@style/SignButtons"/>

            <ImageView
                android:id="@+id/imgView_vk"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_above="@+id/btn_sign_in"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/vk_icon"/>

            <Button
                android:id="@+id/btn_sign_in_vk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_sign_in"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/imgView_vk"
                android:layout_toRightOf="@+id/imgView_vk"
                android:text="@string/sign_in_with_vk"
                android:theme="@style/SignButtons"/>

            <ImageView
                android:id="@+id/imgView_google"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_above="@+id/imgView_vk"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/googleplus_icon"/>

            <Button
                android:id="@+id/btn_sign_in_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_sign_in_vk"
                android:layout_alignTop="@+id/imgView_google"
                android:layout_toEndOf="@+id/imgView_google"
                android:layout_toRightOf="@+id/imgView_google"
                android:text="@string/sign_in_with_gmail"
                android:theme="@style/SignButtons"/>

            <ImageView
                android:id="@+id/imgView_facebook"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_above="@+id/imgView_google"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/facebook_icon"/>

            <Button
                android:id="@+id/btn_sign_in_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_sign_in_google"
                android:layout_alignTop="@+id/imgView_facebook"
                android:layout_toEndOf="@+id/imgView_facebook"
                android:layout_toRightOf="@+id/imgView_facebook"
                android:text="@string/sign_in_with_facebook"
                android:theme="@style/SignButtons"/>

            <ImageView
                android:id="@+id/imgView_calendar"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_above="@+id/imgView_facebook"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/titlecalendar_icon"/>

        </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/loginActivity_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/activityDetail_banner_id"/>

</RelativeLayout>